--- a/app/src/main/res/layout/activity_menu_tecnico.xml
+++ b/app/src/main/res/layout/activity_menu_tecnico.xml
@@ -52,7 +52,7 @@
         android:id="@+id/textView13"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/amaranth"
+        android:fontFamily="More Fonts..."
         android:text="SERVICIOS ACTIVOS"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
