--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:autoSizeTextType="none"
-        android:fontFamily="@font/amaranth"
+        android:fontFamily="@font/audiowide"
         android:text="Inicio de sesión"
         android:textColor="@color/black"
         android:textSize="20sp"
