--- a/app/src/main/res/layout/list_element.xml
+++ b/app/src/main/res/layout/list_element.xml
@@ -52,7 +52,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="2dp"
-                    android:fontFamily="@font/amaranth"
+                    android:fontFamily="@font/audiowide"
                     android:text="Ticket"
                     android:textColor="@color/black"
                     android:textSize="20sp"
@@ -62,8 +62,8 @@
                     android:id="@+id/descripcion"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="50dp"
-                    android:fontFamily="@font/amaranth"
+                    android:layout_marginBottom="20dp"
+                    android:fontFamily="@font/audiowide"
                     android:text="Descripcion"
                     android:textColor="@color/black"
                     android:textSize="16sp" />
@@ -73,12 +73,12 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
-                    android:fontFamily="@font/amaranth"
+                    android:background="#ece7e7"
+                    android:fontFamily="@font/audiowide"
                     android:text="Estado"
                     android:textColor="@color/black"
-                    android:textSize="10sp"
-                    android:textStyle="bold"
-                    android:background="#ece7e7"/>
+                    android:textSize="14sp"
+                    android:textStyle="bold" />
             </LinearLayout>
         </RelativeLayout>
     </LinearLayout>
