Se intento rehacer el login, no se logro, solo se cambio el tipo de fuente :(

--- a/app/src/main/res/layout/activity_crud_refacciones.xml
+++ b/app/src/main/res/layout/activity_crud_refacciones.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/master4"
     tools:context=".CrudRefacciones">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
