--- a/app/src/main/res/layout/activity_crud_tecnicos.xml
+++ b/app/src/main/res/layout/activity_crud_tecnicos.xml
@@ -11,10 +11,10 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/audiowide"
+        android:fontFamily="@font/abel"
         android:text="ADMINISTRAR TECNICOS"
         android:textColor="@color/black"
-        android:textSize="16sp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -28,7 +28,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="@color/black"
         android:ems="10"
-        android:fontFamily="@font/amaranth"
+        android:fontFamily="@font/abel"
         android:hint="Usuario:"
         android:inputType="textPersonName"
         android:textColor="@color/black"
@@ -47,7 +47,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="@color/black"
         android:ems="10"
-        android:fontFamily="@font/amaranth"
+        android:fontFamily="@font/abel"
         android:hint="Puesto:"
         android:inputType="textPersonName"
         android:textColor="@color/black"
@@ -66,7 +66,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="@color/black"
         android:ems="10"
-        android:fontFamily="@font/amaranth"
+        android:fontFamily="@font/abel"
         android:hint="Apellidos:"
         android:inputType="textPersonName"
         android:textColor="@color/black"
@@ -85,7 +85,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="@color/black"
         android:ems="10"
-        android:fontFamily="@font/amaranth"
+        android:fontFamily="@font/abel"
         android:hint="Nombre:"
         android:inputType="textPersonName"
         android:textColor="@color/black"
@@ -104,7 +104,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="@color/black"
         android:ems="10"
-        android:fontFamily="@font/amaranth"
+        android:fontFamily="@font/abel"
         android:hint="Contraseña:"
         android:inputType="textPassword"
         android:textColor="@color/black"
@@ -134,12 +134,12 @@
         android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/audiowide"
+        android:fontFamily="@font/abel"
         android:text="REGISTRAR"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.104"
+        app:layout_constraintHorizontal_bias="0.144"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.751" />
@@ -161,12 +161,12 @@
         android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/audiowide"
+        android:fontFamily="@font/abel"
         android:text="ELIMINAR"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.873"
+        app:layout_constraintHorizontal_bias="0.828"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.751" />
@@ -187,7 +187,7 @@
         android:id="@+id/textView11"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/audiowide"
+        android:fontFamily="@font/abel"
         android:text="MODIFICAR"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -213,7 +213,7 @@
         android:id="@+id/textView12"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/audiowide"
+        android:fontFamily="@font/abel"
         android:text="CONSULTAR"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
