--- a/app/src/main/res/layout/activity_menu_master.xml
+++ b/app/src/main/res/layout/activity_menu_master.xml
@@ -23,10 +23,10 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/audiowide"
+        android:fontFamily="@font/abel"
         android:text="Supervisor Alan Carrasco"
         android:textColor="@color/black"
-        android:textSize="14sp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -90,7 +90,7 @@
         android:id="@+id/textView8"
         android:layout_width="125dp"
         android:layout_height="23dp"
-        android:fontFamily="@font/audiowide"
+        android:fontFamily="@font/abel"
         android:text="TECNICOS"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -104,7 +104,7 @@
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/audiowide"
+        android:fontFamily="@font/abel"
         android:text="REFACCIONES"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -118,7 +118,7 @@
         android:id="@+id/textView5"
         android:layout_width="108dp"
         android:layout_height="25dp"
-        android:fontFamily="@font/audiowide"
+        android:fontFamily="@font/abel"
         android:text="TICKETS"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
