--- a/app/src/main/res/layout/list_element.xml
+++ b/app/src/main/res/layout/list_element.xml
@@ -52,7 +52,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="2dp"
-                    android:fontFamily="@font/audiowide"
+                    android:fontFamily="@font/abel"
                     android:text="Ticket"
                     android:textColor="@color/black"
                     android:textSize="20sp"
@@ -63,7 +63,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="20dp"
-                    android:fontFamily="@font/audiowide"
+                    android:fontFamily="@font/abel"
                     android:text="Descripcion"
                     android:textColor="@color/black"
                     android:textSize="16sp" />
@@ -74,7 +74,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
                     android:background="#ece7e7"
-                    android:fontFamily="@font/audiowide"
+                    android:fontFamily="@font/abel"
                     android:text="Estado"
                     android:textColor="@color/black"
                     android:textSize="14sp"
